# Manim_Tutorial

./: hello.py  lecture_01.py  pyproject.toml
